ARM: msm: Specify dtbs for DT targets
Specify the dtb files for the devicetree targets so that 'make dtbs'
will generate these files during the build.

Change-Id: Ic3e3aa13b10815a00ef020a2900b649a90f78d1e
Signed-off-by: David Brown <davidb@codeaurora.org>
[sboyd: Also drop upstream dtb files so that android doesn't pick
them up]
Signed-off-by: Stephen Boyd <sboyd@codeaurora.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -89,8 +89,18 @@ dtb-$(CONFIG_ARCH_KIRKWOOD) += kirkwood-cloudbox.dtb \
 	kirkwood-ts219-6282.dtb \
 	kirkwood-openblocks_a6.dtb
 dtb-$(CONFIG_ARCH_MARCO) += marco-evb.dtb
-dtb-$(CONFIG_ARCH_MSM) += msm8660-surf.dtb \
-	msm8960-cdp.dtb
+dtb-$(CONFIG_ARCH_MSM8974) += msm8974-cdp.dtb \
+	msm8974-fluid.dtb \
+	msm8974-liquid.dtb \
+	msm8974-mtp.dtb \
+	msm8974-rumi.dtb \
+	msm8974-sim.dtb
+dtb-$(CONFIG_ARCH_MSM9625) += msm9625-cdp.dtb \
+	msm9625-mtp.dtb \
+	msm9625-rumi.dtb
+dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb
+dtb-$(CONFIG_ARCH_MSM8610) += msm8910-rumi.dtb \
+	msm8910-sim.dtb
 dtb-$(CONFIG_ARCH_MVEBU) += armada-370-db.dtb \
 	armada-370-mirabox.dtb \
 	armada-370-rd.dtb \
