arm/dt: 8226: Device tree nodes for gdsc
Add devices for gdsc regulators present on 8226. Disable all gdscs
by default, and only enable gdscs which are present on a per device
basis.

Change-Id: I0fbf1a76320d13b51385b6db2853fed1863ed00f
Signed-off-by: Patrick Daly <pdaly@codeaurora.org>

--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1289,6 +1289,34 @@
 	};
 };
 
+&gdsc_venus {
+	status = "ok";
+};
+
+&gdsc_mdss {
+	status = "ok";
+};
+
+&gdsc_jpeg {
+	status = "ok";
+};
+
+&gdsc_vfe {
+	status = "ok";
+};
+
+&gdsc_oxili_gx {
+	status = "ok";
+};
+
+&gdsc_oxili_cx {
+	status = "ok";
+};
+
+&gdsc_usb_hsic {
+	status = "ok";
+};
+
 /include/ "msm-pm8x41-rpm-regulator.dtsi"
 /include/ "msm-pm8841.dtsi"
 /include/ "msm-pm8941.dtsi"
