msm: 8226: add support for machine restart
Add support for SOC reset in case of a kernel panic or a reboot
command.

Change-Id: I386dbf99cf110c4fa1ce38562f0de51b79077e27
Signed-off-by: Syed Rameez Mustafa <rameezmustafa@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -399,6 +399,8 @@ config ARCH_MSM8226
 	select GPIO_MSM_V3
 	select MSM_GPIOMUX
 	select HAVE_ARM_ARCH_TIMER
+	select MSM_NATIVE_RESTART
+	select MSM_RESTART_V2
 endmenu
 
 choice
