defconfig: msm8910: Enable IPC Message Router and QMI Interface
Enable QMI communication in msm8910.

Change-Id: I6775a5ef819383b5f5c61750f55d715cb39f7c05
Signed-off-by: Karthikeyan Ramasubramanian <kramasub@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -396,6 +396,7 @@ config ARCH_MSM8910
 	select HAVE_ARM_ARCH_TIMER
 	select MSM_NATIVE_RESTART
 	select MSM_RESTART_V2
+	select QMI_ENCDEC
 
 config ARCH_MSM8226
 	bool "MSM8226"
