--- a/drivers/media/platform/msm/camera_v2/msm_vb2/Makefile
+++ b/drivers/media/platform/msm/camera_v2/msm_vb2/Makefile
@@ -1,3 +1,3 @@
 ccflags-y += -Idrivers/media/platform/msm/camera_v2
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/msm_vb2
-obj-$(CONFIG_MSM_CAMERA) += msm_vb2.o
+obj-$(CONFIG_MSMB_CAMERA) += msm_vb2.o
