--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2012, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2012-2013, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -12,12 +12,12 @@
 
 /include/ "skeleton.dtsi"
 /include/ "msm-iommu-v1.dtsi"
-/include/ "msm8910-ion.dtsi"
+/include/ "msm8610-ion.dtsi"
 /include/ "msm-gdsc.dtsi"
 
 / {
-	model = "Qualcomm MSM 8910";
-	compatible = "qcom,msm8910";
+	model = "Qualcomm MSM 8610";
+	compatible = "qcom,msm8610";
 	interrupt-parent = <&intc>;
 
 	intc: interrupt-controller@f9000000 {
@@ -41,7 +41,7 @@
 	};
 
 	timer {
-		compatible =  "arm,armv7-timer";
+		compatible = "arm,armv7-timer";
 		interrupts = <1 2 0xf08>,
 			     <1 3 0xf08>,
 			     <1 4 0xf08>,
@@ -345,7 +345,7 @@
 	status = "ok";
 };
 
-/include/ "msm8910-iommu-domains.dtsi"
+/include/ "msm8610-iommu-domains.dtsi"
 
-/include/ "msm8910-regulator.dtsi"
+/include/ "msm8610-regulator.dtsi"
 /include/ "msm-pm8110.dtsi"
