--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -89,12 +89,12 @@ dtb-$(CONFIG_ARCH_KIRKWOOD) += kirkwood-cloudbox.dtb \
 	kirkwood-ts219-6282.dtb \
 	kirkwood-openblocks_a6.dtb
 dtb-$(CONFIG_ARCH_MARCO) += marco-evb.dtb
-dtb-$(CONFIG_ARCH_MSM8974) += msm8974-cdp.dtb \
-	msm8974-fluid.dtb \
-	msm8974-liquid.dtb \
-	msm8974-mtp.dtb \
-	msm8974-rumi.dtb \
-	msm8974-sim.dtb
+dtb-$(CONFIG_ARCH_MSM8974) += msm8974-v1-cdp.dtb \
+	msm8974-v1-fluid.dtb \
+	msm8974-v1-liquid.dtb \
+	msm8974-v1-mtp.dtb \
+	msm8974-v1-rumi.dtb \
+	msm8974-v1-sim.dtb
 dtb-$(CONFIG_ARCH_MSM9625) += msm9625-cdp.dtb \
 	msm9625-mtp.dtb \
 	msm9625-rumi.dtb
