--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -94,7 +94,11 @@ dtb-$(CONFIG_ARCH_MSM8974) += msm8974-v1-cdp.dtb \
 	msm8974-v1-liquid.dtb \
 	msm8974-v1-mtp.dtb \
 	msm8974-v1-rumi.dtb \
-	msm8974-v1-sim.dtb
+	msm8974-v1-sim.dtb \
+	msm8974-v2-cdp.dtb \
+	msm8974-v2-fluid.dtb \
+	msm8974-v2-liquid.dtb \
+	msm8974-v2-mtp.dtb
 dtb-$(CONFIG_ARCH_MSM9625) += msm9625-cdp.dtb \
 	msm9625-mtp.dtb \
 	msm9625-rumi.dtb
