bif: Add BIF core framework driver
Add a BIF framework which implements core features of the MIPI
(Mobile Industry Processor Interace) BIF (Battery Interface)
specification.  MIPI-BIF defines an interface which can be used
to communicate with smart battery packs.

BIF controller drivers register with the BIF framework and
implement hardware specific features.  BIF consumers can make use
of an extensive API to communicate with BIF slaves present on a
BIF bus.

Change-Id: Id640344aadf878a49e93b12b16a5ecb181dd5aeb
Signed-off-by: David Collins <collinsd@codeaurora.org>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -160,3 +160,5 @@ obj-$(CONFIG_NTB)		+= ntb/
 obj-$(CONFIG_MOBICORE_SUPPORT)  += gud/
 
 obj-$(CONFIG_CORESIGHT)		+= coresight/
+
+obj-$(CONFIG_BIF)		+= bif/
