arm/dt: msm8974: Add devices for SSM
Add device tree information for SSM device. The device
tree entry corresponds to the bindings already defined
for ssm.

Change-Id: I24f39b2a56465cce1e71aff0503f09f0b655f95e
Signed-off-by: Ashay Jaiswal <ashayj@codeaurora.org>

--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1229,6 +1229,11 @@
 	qcom,bcl {
 		compatible = "qcom,bcl";
 	};
+
+	qcom,ssm {
+		compatible = "qcom,ssm";
+		qcom,channel-name = "SSM_RTR";
+	};
 };
 
 &gdsc_venus {
