--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -103,7 +103,9 @@ dtb-$(CONFIG_ARCH_MSM9625) += msm9625-v1-cdp.dtb \
 	msm9625-v1-mtp.dtb \
 	msm9625-v1-rumi.dtb \
 	msm9625-v2-cdp.dtb \
-	msm9625-v2-mtp.dtb
+	msm9625-v2-mtp.dtb \
+	msm9625-v2-1-mtp.dtb \
+	msm9625-v2-1-cdp.dtb
 dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb
 dtb-$(CONFIG_ARCH_MSM8610) += msm8610-rumi.dtb \
 	msm8610-sim.dtb
