--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -106,7 +106,10 @@ dtb-$(CONFIG_ARCH_MSM9625) += msm9625-v1-cdp.dtb \
 	msm9625-v2-mtp.dtb \
 	msm9625-v2-1-mtp.dtb \
 	msm9625-v2-1-cdp.dtb
-dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb
+dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb \
+	msm8226-cdp.dtb \
+	msm8226-mtp.dtb \
+	msm8226-qrd.dtb
 dtb-$(CONFIG_ARCH_MSM8610) += msm8610-rumi.dtb \
 	msm8610-sim.dtb
 dtb-$(CONFIG_ARCH_MVEBU) += armada-370-db.dtb \
