thermal: tsens: Add local initialization flag
TSENS control registers are now configured at boot. Therefore
there is no need to re-initialize them now. The control
registers are also in a secure domain. Add a flag to check if
local initialization is required if the control registers
initialization is not done at boot. The change also enables
critical temperature thresholds that shut down the device
if the temperature crosses 120degC/-35degC to protect
the device from overheating. Also update the polling rate
default from 312.5ms to 62.5ms for cases when local control
register initialization is done.

Change-Id: I73ded3d1656a0fd168c9e8d742bccf3226c162cf
Signed-off-by: Siddartha Mohanadoss <smohanad@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -452,6 +452,7 @@
 		qcom,slope = <2901 2846>;
 		qcom,calib-mode = "fuse_map2";
 		qcom,calibration-less-mode;
+		qcom,tsens-local-init;
 	};
 
 };
