arm/dt: KRYPTON: Add initial device tree for MSMKRYPTON
Add the DTSI file for the MSMKRYPTON SoC as well as a DTS file
for the MSMKRYPTON SIM platform. Also update makefile for
compiling dts file.

Change-Id: I9b25dcebe5e41ca02f4947d81a11f704408e12dd
Signed-off-by: Abhimanyu Kapur <abhimany@codeaurora.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -112,6 +112,7 @@ dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb \
 	msm8226-qrd.dtb
 dtb-$(CONFIG_ARCH_MSM8610) += msm8610-rumi.dtb \
 	msm8610-sim.dtb
+dtb-$(CONFIG_ARCH_MSMKRYPTON) += msmkrypton-sim.dtb
 dtb-$(CONFIG_ARCH_MSMZINC) += msmzinc-sim.dtb
 dtb-$(CONFIG_ARCH_MVEBU) += armada-370-db.dtb \
 	armada-370-mirabox.dtb \
