arm/dt: msm8974: modify bam_dmux entry
In real world usecase testing, occasional minor processing delays in the
receive path have been observed to cause the sender to meet the criteria
for dropping packets much faster than expected.  This causes an undesired
drop in throughput due to required retransmissions.

Override the default receive ring buffer size to a larger value in order
to buffer additional data in this scenario thereby delaying the need for
the sender to drop packets.

Change-Id: Id1db312d90405acb83687c1550ed1f5c1d47c407
Signed-off-by: Jeffrey Hugo <jhugo@codeaurora.org>

--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1273,6 +1273,7 @@
 		compatible = "qcom,bam_dmux";
 		reg = <0xfc834000 0x7000>;
 		interrupts = <0 29 1>;
+		qcom,rx-ring-size = <64>;
 	};
 
         qcom,msm-mem-hole {
