--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -433,6 +433,7 @@ config ARCH_MSM8610
 	select MSM_SPM_REGULATOR
 	select MSM_JTAG_MM if CORESIGHT_ETM
 	select MSM_CPR_REGULATOR
+	select MSM_RPM_LOG
 
 config ARCH_MSM8226
 	bool "MSM8226"
@@ -472,6 +473,7 @@ config ARCH_MSM8226
 	select MSM_SPM_REGULATOR
 	select MSM_JTAG_MM if CORESIGHT_ETM
 	select MSM_CPR_REGULATOR
+	select MSM_RPM_LOG
 endmenu
 
 choice
