arm/dt: msm8610: Add TSENS sensor-id mapping
Include the flag qcom,map-sensor-id to map TS0
and remote sensor TS5.

Change-Id: I8cf173e3414ff6f357310813aa3aee6dbb023a71
Signed-off-by: Siddartha Mohanadoss <smohanad@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -596,6 +596,7 @@
 		qcom,calib-mode = "fuse_map3";
 		qcom,calibration-less-mode;
 		qcom,tsens-local-init;
+		qcom,sensor-id = <0 5>;
 	};
 
 	qcom,msm-thermal {
