arm/dt: msm8610: Switch to SDHC by default
Disable the SDCC devices and enable the SDHC devices to switch to SDHCI
driver by default.

Change-Id: I748746d74d5792aa963a3b0896700a7d68b98964
Signed-off-by: Venkat Gopalakrishnan <venkatg@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -149,6 +149,8 @@
 		qcom,bus-width = <8>;
 		qcom,nonremovable;
 		qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
+
+		status = "disabled";
 	};
 
 	sdcc2: qcom,sdcc@f98a4000 {
@@ -180,6 +182,8 @@
 		qcom,xpc;
 		qcom,bus-speed-mode = "SDR12", "SDR25", "SDR50", "DDR50", "SDR104";
 		qcom,current-limit = <800>;
+
+		status = "disabled";
 	};
 
 	sdhc_1: sdhci@f9824900 {
