wcnss: pil-pronto: Proxy unvote after clock ready
Use the SMP2P framework to intercept the wcnss clock ready interrupt
to proxy unvote after wcnss has booted up. Do this by getting the SMP2P
IRQ for wcnss clock ready; and then include the IRQ in the pil
descriptor during registration with the pil framework.

Change-Id: I8046c3f303499fae4d3ee05eea1ccdd57cebb8ef
Signed-off-by: Sameer Thalappil <sameert@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -381,8 +381,9 @@
 
 		qcom,firmware-name = "wcnss";
 
-		/* GPIO input from wcnss */
+		/* GPIO inputs from wcnss */
 		qcom,gpio-err-fatal = <&smp2pgpio_ssr_smp2p_4_in 0 0>;
+		qcom,gpio-proxy-unvote = <&smp2pgpio_ssr_smp2p_4_in 2 0>;
 
 		/* GPIO output to wcnss */
 		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_4_out 0 0>;
