arm/dt: msm8610: Change memory hole location and size
Change the location and size of the memory hole to comply with
msm8610 memory map.

Change-Id: I194471e5bc6c1a17268433490c9e7c94f235e0a1
Signed-off-by: Olav Haugan <ohaugan@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -253,7 +253,7 @@
 
 	qcom,msm-mem-hole {
 		compatible = "qcom,msm-mem-hole";
-		qcom,memblock-remove = <0x07C00000 0x6000000>; /* Address and Size of Hole */
+		qcom,memblock-remove = <0x07B00000 0x6400000>; /* Address and Size of Hole */
 	};
 
 	qcom,wdt@f9017000 {
