arm/dt: msm8610: add bam_dmux entry
Enable the data call transport by adding the bam_dmux device.

Change-Id: I4ff90a902e34fdadd557c12f3643056adc77ce62
Signed-off-by: Jeffrey Hugo <jhugo@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -564,6 +564,12 @@
 		reg = <0xfd484000 0x400>;
 		qcom,num-locks = <8>;
 	};
+
+	qcom,bam_dmux@fc834000 {
+		compatible = "qcom,bam_dmux";
+		reg = <0xfc834000 0x7000>;
+		interrupts = <0 29 1>;
+	};
 };
 
 &gdsc_vfe {
