arm/dt: msm8610: switch to rpm controlled regulator support
Switch control of most PMIC PM8110 regulators from direct SPMI
control via qpnp-regulator to indirect RPM control via
rpm-regulator-smd for MSM8610.

Add a pm8110_l3_ao device for acpuclock usage. Add a pm8110_l3_so
device to provide a default sleep set VDD_MX voltage level request.

Modify the voltage ranges for SMPS 1, SMPS 3 and LDO 3. When using
RPM control, it is safe to allow requests all the way down to
retention voltage levels because the RPM is able to enforce system
wide constraints that the APPS cannot.

The voltage ranges when using qpnp-regulator were:
SMPS 1 - 1150000 - 1150000 uV
SMPS 3 - 1350000 - 1350000 uV
LDO 3 - 1150000 - 1150000 uV

Change these ranges to the following under RPM control:

SMPS 1 - 500000 - 1275000 uV
SMPS 3 - 1200000 - 1350000 uV
LDO 3 - 750000 - 1275000 uV

Change-Id: Idae6e6a8733e5987d71af8ab14e7775ac40e8819
Signed-off-by: Xiaozhe Shi <xiaozhes@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610.dtsi
+++ b/arch/arm/boot/dts/msm8610.dtsi
@@ -404,7 +404,7 @@
 		reg = <0xf9011050 0x8>;
 		reg-names = "rcg_base";
 		a7_cpu-supply = <&apc_vreg_corner>;
-		a7_mem-supply = <&pm8110_l3>;
+		a7_mem-supply = <&pm8110_l3_ao>;
 	};
 
 	spmi_bus: qcom,spmi@fc4c0000 {
@@ -766,6 +766,7 @@
 
 /include/ "msm8610-iommu-domains.dtsi"
 
+/include/ "msm-pm8110-rpm-regulator.dtsi"
 /include/ "msm-pm8110.dtsi"
 /include/ "msm8610-regulator.dtsi"
 
