arm/dt: msm8610: Add DT support for haptics
Add necessary DT settings for haptics on msm8610 devices

Change-Id: I116dcc02de5b259410b3a6b6c64a149bd3e7c613
Signed-off-by: Chun Zhang <chunz@codeaurora.org>

--- a/arch/arm/boot/dts/msm-pm8110.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110.dtsi
@@ -492,5 +492,12 @@
 			reg = <0x5500 0x100>;
 			status = "disabled";
 		};
+
+		qcom,vibrator@c000 {
+			compatible = "qcom,qpnp-vibrator";
+			reg = <0xc000 0x100>;
+			label = "vibrator";
+			status = "disabled";
+		};
 	};
 };
