--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -104,8 +104,8 @@ dtb-$(CONFIG_ARCH_MSM9625) += msm9625-v1-cdp.dtb \
 	msm9625-v1-rumi.dtb \
 	msm9625-v2-cdp.dtb \
 	msm9625-v2-mtp.dtb \
-	msm9625-v2-1-mtp.dtb \
-	msm9625-v2-1-cdp.dtb
+	msm9625-v2.1-mtp.dtb \
+	msm9625-v2.1-cdp.dtb
 dtb-$(CONFIG_ARCH_MSM8226) += msm8226-sim.dtb \
 	msm8226-cdp.dtb \
 	msm8226-mtp.dtb \
