arm/dt: msm8610: Add DT support for homerow WLED
Add necessary DT support to enable MPP controlled WLED for msm8610
CDP and MTP

Change-Id: I6cf5668c0a94589ffb9110ade55d77f91524cf2a
Signed-off-by: Chun Zhang <chunz@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610-cdp.dts
+++ b/arch/arm/boot/dts/msm8610-cdp.dts
@@ -60,6 +60,20 @@
 
 &spmi_bus {
 	qcom,pm8110@0 {
+		qcom,leds@a100 {
+			status = "okay";
+			qcom,led_mpp_2 {
+				label = "mpp";
+				linux,name = "button-backlight";
+				linux-default-trigger = "hr-trigger";
+				qcom,default-state = "off";
+				qcom,max-current = <40>;
+				qcom,id = <6>;
+				qcom,source-sel = <1>;
+				qcom,mode-ctrl = <0x60>;
+			};
+		};
+
 		qcom,leds@a200 {
 			status = "okay";
 			qcom,led_mpp_3 {
