REVERTME: usb: phy: add Intel HSIC PHY driver
Depend on: PATCH usb: core: add usb_notify_port_change() to notify a port change

Naturally, HSIC doesn't support disconnect. The driver adds
disconnect via a gpio, and provide sysfs interface for telephony
stack to disconnect modem (i.e. enter flight mode).

The driver also supports a wakeup gpio as a backup solution to support
modem remote wakeup if inband remote wakeup doesn't work.

Change-Id: I6e56bbcc7d3da5c4c60e2082f76bf67c4c55bb00
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-4004
Signed-off-by: Zhuang Jin Can <jin.can.zhuang@intel.com>
Signed-off-by: Fabien Marotte <fabien.marotte@intel.com>

--- a/drivers/usb/phy/Kconfig
+++ b/drivers/usb/phy/Kconfig
@@ -67,6 +67,14 @@ config KEYSTONE_USB_PHY
 	  interface to interact with USB 2.0 and USB 3.0 PHY that is part
 	  of the Keystone SOC.
 
+config INTEL_HSIC
+	tristate "Intel HSIC PHY Driver"
+	help
+	  Enable this to support Intel HSIC PHY connected with a modem.
+	  Naturally, HSIC doesn't support disconnect. The driver adds
+	  disconnect via a gpio, and provide sysfs interface for telephony
+	  stack to disconnect modem (i.e. enter flight mode).
+
 config MV_U3D_PHY
 	bool "Marvell USB 3.0 PHY controller Driver"
 	depends on CPU_MMP3
