Silent Lake: kernel driver
Kernel driver for Intel TEE using virtualization technology

source files are exact copies from the imin_legacy branch
git repo: linux/modules/sldriver/
commit-id: 256036c4b036

Makefiles were modified for imin
unused files were deleted
but .c and .h files are as-is for ease of comparison

Change-Id: I3dd7ea7bdbe9bf77bf80fa585fe91bcd9d853c21
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-7351
Signed-off-by: Russ Gorby <russ.gorby@intel.com>
Signed-off-by: Fabien Marotte <fabien.marotte@intel.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -172,5 +172,7 @@ source "drivers/phy/Kconfig"
 
 source "drivers/powercap/Kconfig"
 
+source "drivers/sldriver/Kconfig"
+
 endmenu
 source "drivers/external_drivers/Kconfig"
