--- a/drivers/usb/host/Makefile
+++ b/drivers/usb/host/Makefile
@@ -17,6 +17,7 @@ xhci-hcd-y += xhci-ring.o xhci-hub.o xhci-dbg.o
 xhci-hcd-y += xhci-trace.o
 xhci-hcd-$(CONFIG_PCI)	+= xhci-pci.o
 xhci-hcd-y += xhci-intel-cap.o
+xhci-hcd-$(CONFIG_USB_XHCI_INTEL_PLATFORM)	+= xhci-intel.o
 
 ifneq ($(CONFIG_USB_XHCI_PLATFORM), )
 	xhci-hcd-y		+= xhci-plat.o
