ARM: dts: msm: Add support for new PVS tables for MSM8939
Add new speed bin tables based on the speedbin and
version for MSM8939.

CRs-Fixed: 780871
Change-Id: If0ea2a96ae9af1bf6b8897bb42701ecbee5eed9d
Signed-off-by: Hanumath Prasad <hpprasad@codeaurora.org>
Signed-off-by: Sridhar Gujje <sgujje@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8939.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939.dtsi
@@ -46,9 +46,12 @@
 		reg = <0x0b111050 0x8>,
 			<0xb011050 0x8>,
 			<0xb1d1050 0x8>,
-			<0x5800c 0X8>;
+			<0x5800c 0x8>,
+			<0x58000 0x8>,
+			<0x58004 0x8>;
 		reg-names = "apcs-c0-rcg-base", "apcs-c1-rcg-base",
-				"apcs-cci-rcg-base", "efuse";
+				"apcs-cci-rcg-base", "efuse", "efuse1",
+				"efuse2";
 		vdd-c0-supply = <&apc_vreg_corner>;
 		vdd-c1-supply = <&apc_vreg_corner>;
 		vdd-cci-supply = <&apc_vreg_corner>;
@@ -67,7 +70,7 @@
 			<  500000000 9>,
 			<  800000000 12>,
 			<  998400000 17>,
-			< 1113600000 22>;
+			< 1113600000 24>;
 
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
@@ -90,7 +93,7 @@
 			<  500000000 9>,
 			<  800000000 12>,
 			<  998400000 17>,
-			< 1113600000 22>;
+			< 1113600000 24>;
 
 		qcom,speed2-bin-v0-c1 =
 			<          0 0>,
@@ -99,9 +102,34 @@
 			<  960000000 12>,
 			< 1113600000 14>,
 			< 1344000000 17>,
-			< 1497600000 19>;
+			< 1459200000 20>,
+			< 1497600000 21>;
 
 		qcom,speed2-bin-v0-cci =
+			<          0 0>,
+			<  200000000 3>,
+			<  300000000 11>,
+			<  400000000 15>,
+			<  600000000 17>;
+
+		qcom,speed2-bin-v2-c0 =
+			<          0 0>,
+			<  250000000 3>,
+			<  500000000 9>,
+			<  800000000 12>,
+			<  998400000 17>,
+			< 1113600000 24>;
+
+		qcom,speed2-bin-v2-c1 =
+			<          0 0>,
+			<  400000000 3>,
+			<  800000000 9>,
+			<  960000000 12>,
+			< 1113600000 14>,
+			< 1344000000 17>,
+			< 1459200000 20>;
+
+		qcom,speed2-bin-v2-cci =
 			<          0 0>,
 			<  200000000 3>,
 			<  300000000 11>,
@@ -114,7 +142,7 @@
 			<  500000000 9>,
 			<  800000000 12>,
 			<  998400000 17>,
-			< 1113600000 22>;
+			< 1113600000 24>;
 
 		qcom,speed4-bin-v0-c1 =
 			<          0 0>,
@@ -123,8 +151,9 @@
 			<  960000000 12>,
 			< 1113600000 14>,
 			< 1344000000 17>,
-			< 1497600000 19>,
-			< 1651200000 24>;
+			< 1459200000 20>,
+			< 1497600000 21>,
+			< 1651200000 26>;
 
 		qcom,speed4-bin-v0-cci =
 			<          0 0>,
@@ -139,7 +168,7 @@
 			<  500000000 9>,
 			<  800000000 12>,
 			<  998400000 17>,
-			< 1113600000 22>;
+			< 1113600000 24>;
 
 		qcom,speed5-bin-v0-c1 =
 			<          0 0>,
@@ -148,10 +177,37 @@
 			<  960000000 12>,
 			< 1113600000 14>,
 			< 1344000000 17>,
-			< 1497600000 19>,
-			< 1651200000 24>;
+			< 1459200000 20>,
+			< 1497600000 21>,
+			< 1651200000 26>;
 
 		qcom,speed5-bin-v0-cci =
+			<          0 0>,
+			<  200000000 3>,
+			<  300000000 11>,
+			<  400000000 15>,
+			<  600000000 17>;
+
+		qcom,speed5-bin-v6-c0 =
+			<          0 0>,
+			<  250000000 3>,
+			<  500000000 9>,
+			<  800000000 12>,
+			<  998400000 17>,
+			< 1113600000 24>;
+
+		qcom,speed5-bin-v6-c1 =
+			<          0 0>,
+			<  400000000 3>,
+			<  800000000 9>,
+			<  960000000 12>,
+			< 1113600000 14>,
+			< 1344000000 17>,
+			< 1459200000 20>,
+			< 1497600000 21>,
+			< 1651200000 26>;
+
+		qcom,speed5-bin-v6-cci =
 			<          0 0>,
 			<  200000000 3>,
 			<  300000000 11>,
@@ -211,8 +267,8 @@
 			<  960000  2636 >,
 			<  1113600 5346 >,
 			<  1344000 6079 >,
+			<  1459200 6079 >,
 			<  1497600 6079 >,
-			<  1612800 6079 >,
 			<  1651200 6079 >;
 		cpu-to-dev-map-4 =
 			<  200000 1525 >,
@@ -256,8 +312,8 @@
 			<  960000  297600 >,
 			< 1113600  297000 >,
 			< 1344000  595200 >,
+			< 1459200  595200 >,
 			< 1497600  595200 >,
-			< 1612800  595200 >,
 			< 1651200  595200 >;
 		cpu-to-dev-map-4 =
 			<  200000 200000 >,
@@ -295,8 +351,8 @@
                          <  960000 >,
 			 < 1113600 >,
 			 < 1344000 >,
+			 < 1459200 >,
 			 < 1497600 >,
-			 < 1612800 >,
 			 < 1651200 >;
 		qcom,cpufreq-table-4 =
 			 <  200000 >,
