- Changed ISH -> ISS names in comments, kernel config files - Incorporates fix "heci: add the device to device list before register it to system" (submitted by MCG SI as https://android.intel.com/#/c/315575/) - Incorporates fix "before unregister the device check if the device has been registered" (submitted by MCG SI as https://android.intel.com/#/c/312883/) - Incorporates fix "ish_remove: only flush ish's related workqueue" (submitted by MCG SI as https://android.intel.com/#/c/315010/) - Incorporates fix "heci-hid.c: fix memory leak" (submitted by MCG SI as https://android.intel.com/#/c/316841/) - Fixes regression in IMIN tree (AOS crash when connecting to SMHI client) - Fixes IMIN regression (exposing right sensors properties moved not to interfere with other HID devices) - Added Cx Si support - Fixed double-free issue in hid-sensor-hub driver
Change-Id: I9be2bb8f695272ec361fad4c9b5c689a86801939
Signed-off-by: Daniel Drubin <daniel.drubin@intel.com>
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-14110
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-16554
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-16444
Tracked-On: https://jira01.devtools.intel.com/browse/IMINAN-14915
Reviewed-on: https://android.intel.com:443/319163
Signed-off-by: Fabien Marotte <fabien.marotte@intel.com>

--- a/drivers/misc/heci/Kconfig
+++ b/drivers/misc/heci/Kconfig
@@ -1,13 +1,26 @@
-config INTEL_ISH
-	tristate "Intel Integrated Sensors Hub"
+config INTEL_ISS
+	tristate "Intel Integrated Sensors Solution"
 	depends on X86 && PCI
 	help
-	  ISH enabled sensors hub functionality on SoC/chipset level.
+	  ISS enabled sensors hub functionality on SoC/chipset level.
+	  Placeholder for description line 2.
+	  Placeholder for description line 3.
+	  Placeholder for description line 4.
 
-config ISH_PATH_SENSCOL
-	tristate "ISH path through sensor-collection"
-	depends on INTEL_ISH
+config ISS_PATH_SENSCOL
+	tristate "ISS path through sensor-collection"
+	depends on INTEL_ISS
+	help
+	  Enables sensor-collection path for hid-sensor-hub.
+	  Placeholder for description line 2.
+	  Placeholder for description line 3.
+	  Placeholder for description line 4.
 
-config ISH_PATH_IIO
-	tristate "ISH path through IIO"
-	depends on INTEL_ISH
+config ISS_PATH_IIO
+	tristate "ISS path through IIO"
+	depends on INTEL_ISS
+	help
+	  Enables IIO path for hid-sensor-hub.
+	  Placeholder for description line 2.
+	  Placeholder for description line 3.
+	  Placeholder for description line 4.
