ARM: dts: msm: Support boards with PMK8001 PMIC for msm8996
Some MSM8996 boards will employ the PMK8001 PMIC. Introduce
msm-pmk8001.dtsi which defines the PMIC peripherals Linux may need
to communicate with. In addition, introduce the board level files
whose hierarchy include the corresponding qcom,pmic-id so that
the bootloader is able to pick compatible DTB blobs on boards which
use PMK8001.

Change-Id: I1d5f9c2422efef68f7a4a174c47a1e065bfa989a
Signed-off-by: Osvaldo Banuelos <osvaldob@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm8994.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2014, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -338,7 +338,7 @@
 			reg = <0x2800 0x100>;
 		};
 
-		qcom,pm8994_rtc {
+		pm8994_rtc: qcom,pm8994_rtc {
 			spmi-dev-container;
 			compatible = "qcom,qpnp-rtc";
 			#address-cells = <1>;
