ARM: dts: msm: add sleep set for PCIe GPIO on MSM8996
When PCIe link is turned off, its GPIO should be
configured to its sleep state. Therefore, add the
sleep set for PCIe GPIO on MSM8996.

Change-Id: Ie88b313692a3147927732134c566a1084ec02781
Signed-off-by: Tony Truong <truong@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-pinctrl.dtsi
@@ -632,6 +632,22 @@
 					bias-pull-down;
 				};
 			};
+
+			pcie0_clkreq_sleep: pcie0_clkreq_sleep {
+				pcie0 {
+					pins = "gpio36";
+					drive-strength = <2>;
+					bias-disabled;
+				};
+			};
+
+			pcie0_wake_sleep: pcie0_wake_sleep {
+				pcie0 {
+					pins = "gpio37";
+					drive-strength = <2>;
+					bias-disabled;
+				};
+			};
 		};
 
 		pcie1 {
@@ -673,6 +689,22 @@
 					bias-pull-down;
 				};
 			};
+
+			pcie1_clkreq_sleep: pcie1_clkreq_sleep {
+				pcie1 {
+					pins = "gpio131";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+
+			pcie1_wake_sleep: pcie1_wake_sleep {
+				pcie1 {
+					pins = "gpio132";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
 		};
 
 		pcie2 {
@@ -712,6 +744,22 @@
 					pins = "gpio116";
 					drive-strength = <2>;
 					bias-pull-down;
+				};
+			};
+
+			pcie2_clkreq_sleep: pcie2_clkreq_sleep {
+				pcie2 {
+					pins = "gpio115";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+
+			pcie2_wake_sleep: pcie2_wake_sleep {
+				pcie2 {
+					pins = "gpio116";
+					drive-strength = <2>;
+					bias-disable;
 				};
 			};
 		};
