ARM: dts: msm-pmi8994: add LED:SWITCH node to combine both flashLED channel
Add LED:SWITCH node to combine both flashLED channel. Also, move
duration properties from individual to common node property. Also, changes
includes camera sensor dtsi change in order to support LED:SWITCH node.

Change-Id: Icf74ae3be6100cc32c9af272d76371679da6c640
Signed-off-by: Jigarkumar Kishorkumar Zala <j_zala@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -632,16 +632,16 @@
 			qcom,headroom-sense-ch0-enabled;
 			qcom,headroom-sense-ch1-enabled;
 			qcom,power-detect-enabled;
+			qcom,duration = <1280>;
 
 			pmi8994_flash0: qcom,flash_0 {
 				label = "flash";
 				qcom,led-name = "led:flash_0";
 				qcom,default-led-trigger =
 						"flash0_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <0>;
 				qcom,current = <625>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_flash1: qcom,flash_1 {
@@ -649,10 +649,9 @@
 				qcom,led-name = "led:flash_1";
 				qcom,default-led-trigger =
 						"flash1_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <1>;
 				qcom,current = <625>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_torch0: qcom,torch_0 {
@@ -660,9 +659,9 @@
 				qcom,led-name = "led:torch_0";
 				qcom,default-led-trigger =
 						"torch0_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <0>;
 				qcom,current = <120>;
+				qcom,max-current = <200>;
 				boost-supply = <&pmi8994_boostbypass>;
 				boost-voltage-max = <3600000>;
 			};
@@ -672,12 +671,24 @@
 				qcom,led-name = "led:torch_1";
 				qcom,default-led-trigger =
 						"torch1_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <1>;
 				qcom,current = <120>;
+				qcom,max-current = <200>;
 				boost-supply = <&pmi8994_boostbypass>;
 				boost-voltage-max = <3600000>;
 			};
+
+			pmi8994_switch: qcom,switch {
+                                label = "switch";
+                                qcom,led-name = "led:switch";
+                                qcom,default-led-trigger =
+                                                "switch_trigger";
+                                qcom,id = <2>;
+				qcom,current = <625>;
+				qcom,max-current = <1000>;
+				boost-supply = <&pmi8994_boostbypass>;
+				boost-voltage-max = <3600000>;
+                        };
 		};
 	};
 };
