--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -621,16 +621,16 @@
 			qcom,headroom-sense-ch1-enabled;
 			qcom,power-detect-enabled;
 			qcom,otst2-module-enabled;
+			qcom,duration = <1280>;
 
 			pmi8994_flash0: qcom,flash_0 {
 				label = "flash";
 				qcom,led-name = "led:flash_0";
 				qcom,default-led-trigger =
 						"flash0_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <0>;
 				qcom,current = <625>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_flash1: qcom,flash_1 {
@@ -638,10 +638,9 @@
 				qcom,led-name = "led:flash_1";
 				qcom,default-led-trigger =
 						"flash1_trigger";
-				qcom,max-current = <1000>;
-				qcom,duration = <1280>;
 				qcom,id = <1>;
 				qcom,current = <625>;
+				qcom,max-current = <1000>;
 			};
 
 			pmi8994_torch0: qcom,torch_0 {
@@ -649,9 +648,9 @@
 				qcom,led-name = "led:torch_0";
 				qcom,default-led-trigger =
 						"torch0_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <0>;
 				qcom,current = <120>;
+				qcom,max-current = <200>;
 				boost-supply = <&pmi8994_boostbypass>;
 				boost-voltage-max = <3600000>;
 			};
@@ -661,9 +660,21 @@
 				qcom,led-name = "led:torch_1";
 				qcom,default-led-trigger =
 						"torch1_trigger";
-				qcom,max-current = <200>;
 				qcom,id = <1>;
 				qcom,current = <120>;
+				qcom,max-current = <200>;
+				boost-supply = <&pmi8994_boostbypass>;
+				boost-voltage-max = <3600000>;
+			};
+
+			pmi8994_switch: qcom,switch {
+				label = "switch";
+				qcom,led-name = "led:switch";
+				qcom,default-led-trigger =
+						"switch_trigger";
+				qcom,id = <2>;
+				qcom,current = <625>;
+				qcom,max-current = <1000>;
 				boost-supply = <&pmi8994_boostbypass>;
 				boost-voltage-max = <3600000>;
 			};
