ARM: dts: msm: Add a DT node for PIL to load the zap shader
A530 uses a zap shader ucode to flush internal memories when
switching from trusted to untrusted mode. This ucode needs to be
protected and programmed by the Hypervisor. We use the PIL to
do the appropriate calls to the Hypervisor for us and it needs a
DT node to recognize what needs to be loaded.

Change-Id: I02d2ea2203e52ecd982aec85bb8e580880b66104
Signed-off-by: Shrenuj Bansal <shrenujb@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-gpu.dtsi
@@ -11,6 +11,14 @@
  */
 
 &soc {
+
+	pil_gpu: qcom,kgsl-hyp {
+		compatible = "qcom,pil-tz-generic";
+		qcom,pas-id = <13>;
+		qcom,firmware-name = "a530_zap";
+		memory-region = <&peripheral_mem>;
+	};
+
 	msm_bus: qcom,kgsl-busmon{
 		label = "kgsl-busmon";
 		compatible = "qcom,kgsl-busmon";
